--- a/Сайт-визитка.html
+++ b/Сайт-визитка.html
@@ -43,9 +43,10 @@
   <img src="https://images.unsplash.com/photo-1531092601737-e5b3b6e57365?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" height="600px" width="400px" style="float:right; margin-left:100px;" alt="описание_изображения">
 
   <div class="container">
-    <h2>About me</h2>
+    <h2>About me (◕‿◕)</h2>
     <p class="about-me">Hello! My name is Elina and I teach English. I'm QA-engineer and I'm interested in new technologies.
     </p>
+    <p>QA Engineer</p>
     <h2>Skills</h2>
     <ul>
       <li>HTML</li>
@@ -53,19 +54,21 @@
       <li>JavaScript</li>
       <li>React</li>
       <li>English</li>
+      <li>Spanish</li>
     </ul>
-    <h2>Interests</h2>
+    <h2>Interests ʕ ᵔᴥᵔ ʔ</h2>
     <ul>
       <li>Travelling</li>
       <li>Gym</li>
       <li>Dance</li>
       <li>Outdoor activities</li>
     </ul>
-    <h2>You can contact me</h2>
+    <h2>You can contact me (´｡• ᵕ •｡`)</h2>
     <ul>
       <li>email</li>
       <li>mobile phone</li>
       <li>Telegram</li>
+      <li>Instagram</li>
     </ul>
   </div>
   <footer>
